feat: 프로필 조회에 email 필드 추가